{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 161,
  "lineage": "fe5e3195-f945-2b71-d116-9f6bd10d061d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335267178:route-table/rtb-093be0ba5538727aa",
            "id": "rtb-093be0ba5538727aa",
            "owner_id": "730335267178",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "starkserverless-private-route-table"
            },
            "tags_all": {
              "Name": "starkserverless-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c34b8c554f5c5f55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.serverless_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b78bebab5f8493f",
            "route_table_id": "rtb-093be0ba5538727aa",
            "subnet_id": "subnet-0e16a6762210ca4cc"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private-subnets",
            "aws_vpc.serverless_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e061187a716dfed3",
            "route_table_id": "rtb-093be0ba5538727aa",
            "subnet_id": "subnet-04d8f4f8ba424ab02"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private-subnets",
            "aws_vpc.serverless_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e221ff9c2639b6cc",
            "route_table_id": "rtb-093be0ba5538727aa",
            "subnet_id": "subnet-0e358120c94ad1123"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private-subnets",
            "aws_vpc.serverless_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05588fac2c23d0ce3",
            "route_table_id": "rtb-093be0ba5538727aa",
            "subnet_id": "subnet-0d4832bff51e6109f"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private-subnets",
            "aws_vpc.serverless_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335267178:security-group/sg-0fa874ee5238ade3f",
            "description": "Security group for aurora db",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa874ee5238ade3f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-046db75a352bf7956"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "starkserverless-aurora-db-sg",
            "name_prefix": "",
            "owner_id": "730335267178",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "starkserverless-aurora-db-sg"
            },
            "tags_all": {
              "Name": "starkserverless-aurora-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c34b8c554f5c5f55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.serverless_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335267178:security-group/sg-046db75a352bf7956",
            "description": "Security group for lambda function",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046db75a352bf7956",
            "ingress": [],
            "name": "starkserverless-lambda-sg",
            "name_prefix": "",
            "owner_id": "730335267178",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "starkserverless-lambda-sg"
            },
            "tags_all": {
              "Name": "starkserverless-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c34b8c554f5c5f55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.serverless_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secrets_manager_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335267178:security-group/sg-03976922243ee6cdd",
            "description": "Security group for secrets manager endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03976922243ee6cdd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-046db75a352bf7956"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "starkserverless-sm-endpoint-sg",
            "name_prefix": "",
            "owner_id": "730335267178",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "starkserverless-sm-sg"
            },
            "tags_all": {
              "Name": "starkserverless-sm-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c34b8c554f5c5f55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.serverless_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335267178:subnet/subnet-0e16a6762210ca4cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e16a6762210ca4cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335267178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-0c34b8c554f5c5f55-PrivateSubnet-1"
            },
            "tags_all": {
              "Name": "vpc-0c34b8c554f5c5f55-PrivateSubnet-1"
            },
            "vpc_id": "vpc-0c34b8c554f5c5f55"
          },
          "dependencies": [
            "aws_vpc.serverless_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335267178:subnet/subnet-04d8f4f8ba424ab02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d8f4f8ba424ab02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335267178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-0c34b8c554f5c5f55-PrivateSubnet-2"
            },
            "tags_all": {
              "Name": "vpc-0c34b8c554f5c5f55-PrivateSubnet-2"
            },
            "vpc_id": "vpc-0c34b8c554f5c5f55"
          },
          "dependencies": [
            "aws_vpc.serverless_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335267178:subnet/subnet-0e358120c94ad1123",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e358120c94ad1123",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335267178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-0c34b8c554f5c5f55-PrivateSubnet-3"
            },
            "tags_all": {
              "Name": "vpc-0c34b8c554f5c5f55-PrivateSubnet-3"
            },
            "vpc_id": "vpc-0c34b8c554f5c5f55"
          },
          "dependencies": [
            "aws_vpc.serverless_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335267178:subnet/subnet-0d4832bff51e6109f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4832bff51e6109f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335267178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-0c34b8c554f5c5f55-PrivateSubnet-4"
            },
            "tags_all": {
              "Name": "vpc-0c34b8c554f5c5f55-PrivateSubnet-4"
            },
            "vpc_id": "vpc-0c34b8c554f5c5f55"
          },
          "dependencies": [
            "aws_vpc.serverless_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "serverless_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335267178:vpc/vpc-0c34b8c554f5c5f55",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-089b43d0a9cf06798",
            "default_route_table_id": "rtb-079896f96bc64f736",
            "default_security_group_id": "sg-031a3be98751cefd8",
            "dhcp_options_id": "dopt-05369e873905ec321",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c34b8c554f5c5f55",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-079896f96bc64f736",
            "owner_id": "730335267178",
            "tags": {
              "Name": "starkserverless-vpc"
            },
            "tags_all": {
              "Name": "starkserverless-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3-endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335267178:vpc-endpoint/vpce-00431068b166b2cd1",
            "cidr_blocks": [
              "52.219.156.0/22",
              "52.219.160.0/23",
              "52.219.62.0/23",
              "3.5.212.0/23",
              "3.5.208.0/22",
              "16.12.40.0/23",
              "52.219.64.0/22",
              "16.12.36.0/22"
            ],
            "id": "vpce-00431068b166b2cd1",
            "owner_id": "730335267178",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-093be0ba5538727aa"
            ],
            "service_name": "com.amazonaws.ap-south-1.s3",
            "state": "available",
            "tags": {
              "Name": "vpc-0c34b8c554f5c5f55-S3-endpoint"
            },
            "tags_all": {
              "Name": "vpc-0c34b8c554f5c5f55-S3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0c34b8c554f5c5f55"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_vpc.serverless_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secrets_manager_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335267178:vpc-endpoint/vpce-0c51d8289e249efd5",
            "dns_entry": [
              {
                "dns_name": "vpce-0c51d8289e249efd5-f9a5sbfj.secretsmanager.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0c51d8289e249efd5-f9a5sbfj-ap-south-1c.secretsmanager.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0c51d8289e249efd5-f9a5sbfj-ap-south-1a.secretsmanager.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0c51d8289e249efd5-f9a5sbfj-ap-south-1b.secretsmanager.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "secretsmanager.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z05470223NUQCSON7KELC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c51d8289e249efd5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0092c8c74fe48c8e7",
              "eni-065ce85480dc1f03c",
              "eni-06aa7ac7caedd4dfe"
            ],
            "owner_id": "730335267178",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03976922243ee6cdd"
            ],
            "service_name": "com.amazonaws.ap-south-1.secretsmanager",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.26.52",
                "subnet_id": "subnet-0e16a6762210ca4cc"
              },
              {
                "ipv4": "10.0.42.104",
                "subnet_id": "subnet-04d8f4f8ba424ab02"
              },
              {
                "ipv4": "10.0.53.116",
                "subnet_id": "subnet-0e358120c94ad1123"
              }
            ],
            "subnet_ids": [
              "subnet-04d8f4f8ba424ab02",
              "subnet-0e16a6762210ca4cc",
              "subnet-0e358120c94ad1123"
            ],
            "tags": {
              "Name": "vpc-0c34b8c554f5c5f55-SecretsManager-endpoint"
            },
            "tags_all": {
              "Name": "vpc-0c34b8c554f5c5f55-SecretsManager-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c34b8c554f5c5f55"
          },
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_security_group.secrets_manager_sg",
            "aws_subnet.private-subnets",
            "aws_vpc.serverless_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}